Update followage description and command

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <ul>  
     <li><strong>!lurk</strong> → Lurking mode activated!</li>
     <li><strong>!unlurk</strong> → Lurking mode deactivated!</li>
+    <li><strong>!followage</strong> → Displays how long you've been following the channel</li>
   </ul>
 </body>
 </html>
