Added catfact command

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><strong>!lurk</strong> → Lurking mode activated!</li>
     <li><strong>!unlurk</strong> → Lurking mode deactivated!</li>
     <li><strong>!followage</strong> → Displays how long you've been following the channel</li>
+    <li><strong>!meow</strong> → Displays a random fact about cats (but don't overdo it)</li>
   </ul>
 </body>
 </html>
