Add rip, gg and commands commands

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <li><strong>!unlurk</strong> → Lurking mode deactivated!</li>
     <li><strong>!followage</strong> → Displays how long you've been following the channel</li>
     <li><strong>!meow</strong> → Displays a random fact about cats (but don't overdo it)</li>
+    <li><strong>!gg</strong> → Let Rope (bot) make a comment about MisterKnot's victory</li>
+    <li><strong>!rip</strong> → Allow Rope (bot) to improve MisterKnot's gameplay after a defeat</li>
+    <li><strong>!commands</strong> → This screen!!!</li>
   </ul>
 </body>
 </html>
